--- a/frontend/src/Components/Sidebar.css
+++ b/frontend/src/Components/Sidebar.css
@@ -1,10 +1,11 @@
 .side-btn {
   padding: 15px;
   cursor: pointer;
-  transition: 0.5s
+  transition: 0.5s;
+  border-radius: 5px;
+  color: white;
 }
 
 .side-btn:hover {
-  background-color: rgb(221, 221, 221);
-  border-radius: 5px;
+  background-color: rgb(60, 60, 60);
 }
